--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.19",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.9.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "^10.0.5",
